--- a/src/djangoflix/templates/djangoflix/profiles.html
+++ b/src/djangoflix/templates/djangoflix/profiles.html
@@ -104,7 +104,7 @@
                 {% endfor %}
             </form>
             <div class="d-flex gap-2 justify-content-end">
-                <input type="submit" value="Save" class="btn btn-success" onclick="submitForm()">
+                <input type="submit" value="Save" class="btn btn-success" onclick="submitForm('addProfileForm')">
                 <button class="btn btn-danger" onclick="toggleProfileForm(false)" >Cancel</button>
             </div>
         </div>
